--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>iq_vision</name>
+  <name>ros_opencv</name>
   <version>0.0.0</version>
-  <description>The iq_vision package</description>
+  <description>The ros_opencv package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="eric@todo.todo">eric</maintainer>
+  <maintainer email="luka@todo.todo">luka</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
